Update context for running buildah

--- a/.github/workflows/build_container.yml
+++ b/.github/workflows/build_container.yml
@@ -38,6 +38,7 @@ jobs:
       with:
         containerfiles: |
           Container/Containerfile
+        context: Container
         image: fitbenchmarking-extras
         tags: latest
     
