--- a/Container/Containerfile
+++ b/Container/Containerfile
@@ -3,6 +3,9 @@ FROM ubuntu:24.04
 
 ARG DEBIAN_FRONTEND=noninteractive
 
+
+COPY ralfit.patch /RALFit/
+
 # Install the packages we need to build fitbenchmarking
 RUN apt-get update && apt-get install -y \
     git \
@@ -61,6 +64,8 @@ RUN apt-get install -y gfortran \
     libgdal-dev
 
 RUN git clone https://github.com/ralna/RALFit
+COPY ralfit.patch /RALFit/
+RUN git apply /RALFit/ralfit.patch
 
 RUN pip install numpy
 
@@ -68,8 +73,6 @@ RUN mkdir -p /RALFit/libRALFit/build
 
 WORKDIR /RALFit/libRALFit/build
 
-COPY ./ralfit.patch /RALFit/
-RUN git apply /RALFit/ralfit.patch
 
 RUN cmake .. && make && make install
 
