--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ classifiers = [
 dependencies = [
     'docutils',
     'tqdm>=4.60',
-    'numpy<2.0',
+    'numpy',
     'matplotlib>=2.0',
     'plotly>=5.0.0',
     'scipy>=0.18',
