--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -10,10 +10,9 @@ jobs:
     runs-on: 'ubuntu-latest'
     steps:
     - name: 'Choose Python Version'
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.x'
-        check-latest: true
+        python-version: '3.9'
     - name: Installing
       run: |
         python -m pip install --upgrade pip
@@ -24,10 +23,9 @@ jobs:
     runs-on: 'windows-latest'
     steps:
     - name: 'Choose Python Version'
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.x'
-        check-latest: true
+        python-version: '3.9'
     - name: Installing
       run: |
         python -m pip install --upgrade pip
