--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,12 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
     - name: 'Choose Python Version'
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.x'
-        check-latest: true
+        python-version: '3.8'
 
     - name: 'Build'
       run: |
