--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dynamic = ["version"]
 authors = [{ name = "FitBenchmarkign Team" }]
 description = "FitBenchmarking: A tool for comparing fitting software"
 readme = "README.md"
-requires-python = ">=3.8.1"
+requires-python = ">=3.7.1"
 keywords = [
     "benchmark",
     "fitting",
@@ -24,7 +24,7 @@ classifiers = [
 dependencies = [
     'docutils',
     'tqdm>=4.60',
-    'numpy',
+    'numpy<1.24',
     'matplotlib>=2.0',
     'plotly>=5.0.0',
     'scipy>=0.18',
@@ -38,7 +38,7 @@ dependencies = [
 
 [project.optional-dependencies]
 bumps = ['bumps>=0.9.0']
-DFO = ['DFO-LS']
+DFO = ['DFO-LS', 'dfogn']
 gofit = ['gofit']
 gradient-free = ['gradient-free-optimizers']
 hogben = ['HOGBEN']
@@ -56,8 +56,8 @@ dev = [
     'pytest-cov>=4.0.0',
     'coveralls',
     'coverage[toml]>=6.3',
-    'pylint==3.2.6',
-    'flake8==7.1.1',
+    'pylint==2.9.5',
+    'flake8==3.9.2',
     'pylint-exit',
     'pandas',
     'iminuit>=2.25.2',
@@ -110,6 +110,7 @@ exclude = ['*mock*', '*test*']
 source = "versioningit"
 
 [tool.pylint.main]
+extension-pkg-allow-list = ["gofit"]
 ignore = ["benchmark_problems", "fonts", "test_files", "templates"]
 ignored-modules = [
     "levmar",
@@ -122,8 +123,6 @@ ignored-modules = [
     "pygsl",
     "ral_nlls",
     "theseus",
-    "gofit",
-    "paramonte"
 ]
 
 [tool.pylint.design]
