--- a/Container/Containerfile
+++ b/Container/Containerfile
@@ -59,7 +59,7 @@ RUN apt-get install -y gfortran \
     liblapack-dev \
     libgdal-dev
 
-RUN git clone https://github.com/ralna/RALFit
+RUN git clone --depth 1 https://github.com/ralna/RALFit
 
 RUN mkdir -p /RALFit/libRALFit/build
 WORKDIR /RALFit/libRALFit/build
@@ -80,9 +80,9 @@ RUN mkdir -p /cutest
 
 WORKDIR /cutest
 
-RUN git clone https://github.com/ralna/ARCHDefs ./archdefs && \
-    git clone https://github.com/ralna/SIFDecode ./sifdecode && \
-    git clone https://github.com/ralna/CUTEst ./cutest
+RUN git clone --depth 1 https://github.com/ralna/ARCHDefs ./archdefs && \
+    git clone --depth 1 https://github.com/ralna/SIFDecode ./sifdecode && \
+    git clone --depth 1 https://github.com/ralna/CUTEst ./cutest
 
 RUN mkdir pycutest_cache
 
@@ -193,7 +193,7 @@ RUN cmake --install .
 
 WORKDIR /
 ENV CXX=g++
-RUN git clone https://github.com/cvg/pyceres.git
+RUN git clone --depth 1 https://github.com/cvg/pyceres.git
 WORKDIR /pyceres
 RUN python -m pip install .
 
