--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ dev = [
     'pytest-cov>=4.0.0',
     'coveralls',
     'coverage[toml]>=6.3',
-    'ruff==0.6.3',
+    'ruff==0.6.4',
     'pandas',
     'iminuit>=2.25.2',
     'pre-commit',
@@ -115,26 +115,23 @@ exclude = [
     "test_files",
     "templates"
 ]
-line-length = 79
 
 [tool.ruff.lint]
 select = [
-    # pycodestyle
-    "E",
-    # Pyflakes
-    "F",
-    # pyupgrade
-    "UP",
-    # isort
-    "I",
-    # Numpy
-    "NPY",
+    "E", # pycodestyle
+    "F", # Pyflakes
+    "UP", # pyupgrade
+    "I", # isort
+    "NPY", # Numpy
+    "PERF", # Perflint
+    "LOG", # flake8-logging
+    "ICN", # flake8-import-conventions
+    "SIM", # flake8-simplify
     ]
+ignore = ["PERF203"]
 
 [tool.ruff.format]
 quote-style = "double"
-skip-magic-trailing-comma = false
-
 
 [tool.versioningit]
 default-version = '0.0.0dev1'
