Updated workflows to stop scheduled tests running on forks

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   package_install_check:
     name: Package install check
+    if: github.event.repository.fork == false
     strategy:
       fail-fast: false
       matrix:
