--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ on:
 jobs:
   default_system_linux:
     name: Default System Tests (Linux)
+    if: github.event.repository.fork == false
     runs-on: ubuntu-latest
     container:
       image: 'fitbenchmarking/fitbenchmarking-deps:latest'
@@ -39,6 +40,7 @@ jobs:
 
   full_system_linux:
     name: Full System Tests (Linux)
+    if: github.event.repository.fork == false
     runs-on: ubuntu-latest
     container:
       image: 'fitbenchmarking/fitbenchmarking-extras:latest'
@@ -62,6 +64,7 @@ jobs:
 
   full_unit_linux:
     name: Full Unit Tests (Linux)
+    if: github.event.repository.fork == false
     runs-on: ubuntu-latest
     container:
       image: 'fitbenchmarking/fitbenchmarking-extras:latest'
@@ -94,6 +97,7 @@ jobs:
 
   default_unit_tests:
     name: Default Unit Tests
+    if: github.event.repository.fork == false
     strategy:
       fail-fast: false
       matrix:
@@ -127,6 +131,7 @@ jobs:
 
   linting_test:
     name: Linting Tests (Linux)
+    if: github.event.repository.fork == false
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
@@ -145,9 +150,9 @@ jobs:
 
   publish-test-results:
     name: Publish Test Results
+    if: github.event.repository.fork == false && always()
     needs: [default_system_linux, full_system_linux, default_unit_tests, full_unit_linux]
     runs-on: ubuntu-latest
-    if: always()
     steps:
     - name: Download artifacts
       uses: actions/download-artifact@v4
