Updated minimum supported version of python to 3.9.x

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,11 @@ jobs:
     if: github.event.repository.fork == false
     runs-on: ubuntu-latest
     steps:
+    - name: Install python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.9'
+        check-latest: true
     - name: Checkout code
       uses: actions/checkout@v4
     - name: Install dependencies
