--- a/.github/workflows/build_container.yml
+++ b/.github/workflows/build_container.yml
@@ -37,6 +37,9 @@ jobs:
         sudo apt-get -y -qq update
         sudo apt-get -y install bats btrfs-progs git go-md2man golang libapparmor-dev libglib2.0-dev libgpgme11-dev libseccomp-dev libselinux1-dev make skopeo libbtrfs-dev
         git clone https://github.com/containers/buildah
+        echo "> ls ."
+        ls .
+        echo "> cd buildah"
         cd buildah
         make runc all SECURITYTAGS="apparmor seccomp"
         sudo make install install.runc
