--- a/.github/workflows/build_container.yml
+++ b/.github/workflows/build_container.yml
@@ -20,7 +20,7 @@ env:
 jobs:
   build:
     name: Build the container
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -32,17 +32,6 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Fetch latest Buildah
-      run: |
-        sudo apt-get -y -qq update
-        sudo apt-get -y install bats btrfs-progs git go-md2man golang libapparmor-dev libglib2.0-dev libgpgme11-dev libseccomp-dev libselinux1-dev make skopeo libbtrfs-dev
-        git clone https://github.com/containers/buildah
-    - name: Build latest Buildah
-      run: |
-        make runc all SECURITYTAGS="apparmor seccomp"
-        sudo make install install.runc
-        buildah --help
-      working-directory: buildah
     - name: Build container
       id: build-image
       uses: redhat-actions/buildah-build@v2
