updated the linting workflow to run linting checks on release
Co-authored-by: Andrew Lister <48282025+AndrewLister-STFC@users.noreply.github.com>

--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -3,10 +3,13 @@ name: Linting
 on:
   push:
   pull_request:
+  release:
+    types: [published]
 
 jobs:
   ruff_linux:
     name: Ruff (linux)
+    if: github.event.repository.fork == false
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
