Fix ceres calls in new bindings (docs to follow)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,7 +117,7 @@ ignored-modules = [
     "mantid",
     "matlab",
     "nlopt",
-    "PyCeres",
+    "pyceres",
     "pycutest",
     "pygsl",
     "ral_nlls",
