--- a/pyproject.toml
+++ b/pyproject.toml
@@ -110,14 +110,14 @@ exclude = ['*mock*', '*test*']
 source = "versioningit"
 
 [tool.pylint.main]
-ignore = ["benchmark_problems", "fonts", "test_files", "templates"]
+ignore = ["benchmark_problems", "fonts", "test_files", "templates", "conf.py"]
 ignored-modules = [
     "levmar",
     "lmfit",
     "mantid",
     "matlab",
     "nlopt",
-    "PyCeres",
+    "pyceres",
     "pycutest",
     "pygsl",
     "ral_nlls",
