--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,9 @@ jobs:
     name: Default System Tests (Linux)
     if: github.event.repository.fork == false
     runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.ref }}
+      cancel-in-progress: true
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -42,6 +45,9 @@ jobs:
     name: Full System Tests (Linux)
     if: github.event.repository.fork == false
     runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.ref }}
+      cancel-in-progress: true
     container:
       image: 'ghcr.io/fitbenchmarking/fitbenchmarking-extras:latest'
       credentials:
@@ -71,6 +77,9 @@ jobs:
     name: Full Unit Tests (Linux)
     if: github.event.repository.fork == false
     runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.ref }}
+      cancel-in-progress: true
     container:
       image: 'ghcr.io/fitbenchmarking/fitbenchmarking-extras:latest'
       credentials:
@@ -114,6 +123,9 @@ jobs:
         os: [ubuntu-latest, windows-latest]
         python: ['3.8', '3.12']
     runs-on: ${{ matrix.os }}
+    concurrency:
+      group: ${{ github.ref }}
+      cancel-in-progress: true
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -145,6 +157,9 @@ jobs:
     if: github.event.repository.fork == false && always()
     needs: [default_system_linux, full_system_linux, default_unit_tests, full_unit_linux]
     runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.ref }}
+      cancel-in-progress: true
     steps:
     - name: Download artifacts
       uses: actions/download-artifact@v4
