--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ on:
   release:
     types: [published]
   schedule:
-    - cron: '0 8 * * Mon'
+    - cron: '0 9 * * Mon'
   workflow_dispatch:
 
 jobs:
@@ -21,7 +21,7 @@ jobs:
     if: github.event.repository.fork == false
     runs-on: ubuntu-latest
     concurrency:
-      group: ${{ github.ref }}
+      group: default_system_linux-${{ github.ref }}
       cancel-in-progress: true
     steps:
     - name: Checkout code
@@ -46,7 +46,7 @@ jobs:
     if: github.event.repository.fork == false
     runs-on: ubuntu-latest
     concurrency:
-      group: ${{ github.ref }}
+      group: full_system_linux-${{ github.ref }}
       cancel-in-progress: true
     container:
       image: 'ghcr.io/fitbenchmarking/fitbenchmarking-extras:latest'
@@ -78,7 +78,7 @@ jobs:
     if: github.event.repository.fork == false
     runs-on: ubuntu-latest
     concurrency:
-      group: ${{ github.ref }}
+      group: full_unit_linux-${{ github.ref }}
       cancel-in-progress: true
     container:
       image: 'ghcr.io/fitbenchmarking/fitbenchmarking-extras:latest'
@@ -124,7 +124,7 @@ jobs:
         python: ['3.8', '3.12']
     runs-on: ${{ matrix.os }}
     concurrency:
-      group: ${{ github.ref }}
+      group: default_unit_tests-${{ matrix.os }}-${{ matrix.python }}-${{ github.ref }}
       cancel-in-progress: true
     steps:
     - name: Checkout code
@@ -158,7 +158,7 @@ jobs:
     needs: [default_system_linux, full_system_linux, default_unit_tests, full_unit_linux]
     runs-on: ubuntu-latest
     concurrency:
-      group: ${{ github.ref }}
+      group: publish_test_results-${{ github.ref }}
       cancel-in-progress: true
     steps:
     - name: Download artifacts
