--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,7 +112,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python: ['3.8', '3.12']
+        python: ['3.8', '3.x']
     runs-on: ${{ matrix.os }}
     steps:
     - name: Checkout code
@@ -126,15 +126,15 @@ jobs:
       run: |
         python -m pip install .[bumps,DFO,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt]
         python -m pip install --upgrade .[dev]
-        python -m pip install "numpy<2.0"
     - name: Run linux tests
       if: runner.os == 'Linux'
       run: ci/unit_tests_default.sh
     - name: Run windows tests
       if: runner.os == 'Windows'
-      run: bash ci/unit_tests_default.sh
+      run: |
+        bash ci/unit_tests_default.sh
     - name: Upload test results
-      if: runner.os == 'Linux' && matrix.python == '3.12'
+      if: runner.os == 'Linux' && matrix.python == '3.x'
       uses: actions/upload-artifact@v4
       with:
         name: default_unit_tests
