--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -6,7 +6,7 @@ on:
     types: [submitted]
 
 jobs:
-  default_unit_tests:
+  default_tests_win_mac:
     name: Default Unit Tests
     if: github.event.review.state == 'approved' && github.event.repository.fork == false
     strategy:
