--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -105,7 +105,7 @@ jobs:
         name: full_unit_tests
         path: test-results/full_unit_pytest.xml
 
-  default_unit_tests_linux:
+  default_unit_tests:
     name: Default Unit Tests (Linux)
     if: github.event.repository.fork == false
     strategy:
