--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ lmfit = ['lmfit', 'emcee>=3.1.0']
 mantid = ['h5py>=2.10.0,<3', 'pyyaml>=5.4.1']
 matlab = ['dill']
 minuit = ['iminuit>=2.0']
-nlopt = ['nlopt']
+nlopt = ['nlopt<=2.9.0']
 numdifftools = ['numdifftools']
 paramonte = ['paramonte']
 SAS = ['sasmodels', "tinycc;platform_system=='Windows'"]
