--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -16,7 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [macos-13, windows-latest]
-        python: ['3.9', '3.13']
+        python: ['3.9', '3.x']
     runs-on: ${{ matrix.os }}
     steps:
     - name: Checkout code
