Upload coveralls even after failed tests (#1375)
* Upload coveralls even after failed tests

* Compare to remote master (incase not fetched)

* Compare to ancestor not master

* Update .github/workflows/main.yml

---------

Co-authored-by: RabiyaF <47083562+RabiyaF@users.noreply.github.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,10 +97,11 @@ jobs:
       run: |
         ci/unit_tests.sh
     - name: Submit coverage
+      if: always()
       uses: coverallsapp/github-action@v2
       with:
         file: coverage.lcov
-        compare-ref: master
+        compare-sha: ${{ github.event.pull_request.base.sha }}
         git-commit: ${{ github.event.pull_request.head.sha }}
     - name: Upload test results
       if: always()
