--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -13,24 +13,34 @@ jobs:
       fail-fast: false
       matrix:
         os: [macos-13, windows-latest]
-        python: ['3.9', '3.12']
+        python: ['3.9', '3.13']
+        exclude:
+          - os: windows-latest
+            python: '3.13'
     runs-on: ${{ matrix.os }}
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    - name: Install python
-      uses: actions/setup-python@v5
+    - name: Set up conda
+      uses: conda-incubator/setup-miniconda@v2
       with:
-        python-version: ${{ matrix.python }}
-        check-latest: true
-    - name: Install dependencies
+          miniconda-version: "latest"
+    - name: Install dependencies in conda env
+      shell: bash
       run: |
-        python -m pip install .[bumps,DFO,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt]
+        source $CONDA/etc/profile.d/conda.sh
+        conda create -n default-test-env python=${{ matrix.python }} -y
+        conda activate default-test-env
+        conda install -c conda-forge nlopt -y
+        python -m pip install .[bumps,DFO,gradient-free,minuit,SAS,numdifftools,lmfit]
         python -m pip install --upgrade .[dev]
-        python -m pip install "numpy<2.0"
-    - name: Run macos tests
-      if: runner.os == 'macOS'
-      run: ci/unit_tests_default.sh
-    - name: Run windows tests
-      if: runner.os == 'Windows'
-      run: bash ci/unit_tests_default.sh
+    - name: Run tests
+      shell: bash
+      run: |
+        source $CONDA/etc/profile.d/conda.sh
+        conda activate default-test-env
+        if [ "${{ matrix.os }}" == "macos-13" ]; then
+          ci/unit_tests_default.sh
+        else
+          bash ci/unit_tests_default.sh
+        fi
