--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -10,6 +10,9 @@ jobs:
     name: Ruff (linux)
     if: github.event.repository.fork == false
     runs-on: ubuntu-latest
+    concurrency:
+      group: ruff_linux-${{ github.ref }}
+      cancel-in-progress: true
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
