Updated install.yml to test install on python 3.13.x (#1395)
* Updated install.yml to test install on python 3.13.x

* removed nlopt from the install tests

* Removed the on pull_request event trigger after testing

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -12,13 +12,14 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-13]
+        python: ['3.9', '3.13']
     runs-on: ${{ matrix.os }}
     steps:
     - name: Install python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.9'
+        python-version: ${{ matrix.python }}
         check-latest: true
     - name: Pip install fitbenchmarking
       run: |
-        pip install fitbenchmarking[bumps,DFO,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt]
+        pip install fitbenchmarking[bumps,DFO,gradient-free,minuit,SAS,numdifftools,lmfit]
