--- a/Container/Containerfile
+++ b/Container/Containerfile
@@ -49,6 +49,8 @@ RUN sudo apt-get install -y cmake
 
 WORKDIR /
 
+RUN apt-get install -y pkg-config libhdf5-dev
+
 RUN git clone --depth 1 https://github.com/ISISNeutronMuon/SScanSS-2.git
 WORKDIR /SScanSS-2
 RUN python -m pip install --no-binary=h5py h5py
