--- a/Container/Containerfile
+++ b/Container/Containerfile
@@ -49,7 +49,7 @@ RUN sudo apt-get install -y cmake
 
 WORKDIR /
 
-RUN apt-get install -y pkg-config libhdf5-dev
+RUN apt-get install -y pkg-config libhdf5-dev libglib2.0-0
 
 RUN git clone --depth 1 https://github.com/ISISNeutronMuon/SScanSS-2.git
 WORKDIR /SScanSS-2
