Added test_mantid_parsers.py to the ignore list for SLF

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -147,6 +147,7 @@ ignore = ["PERF203", "RUF012", "RUF015", "RUF019"]
 "fitbenchmarking/results_processing/tests/test_problem_summary_page.py" = ["SLF001"]
 "fitbenchmarking/controllers/tests/test_controllers.py" = ["SLF001"]
 "fitbenchmarking/results_processing/tests/test_plots.py" = ["SLF001"]
+"fitbenchmarking/parsing/tests/test_mantid_parsers.py" = ["SLF001"]
 
 [tool.ruff.format]
 quote-style = "double"
