--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,9 +33,11 @@ jobs:
         check-latest: true
     - name: Install dependencies
       run: |
-        python -m pip install .[bumps,DFO,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
-        python -m pip install --upgrade .[dev]
-        python -m pip install "numpy<2.0"
+        echo "setuptools<78.0.0" > /tmp/constraints.txt
+        pip install .[bumps,DFO,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
+        pip install --upgrade .[dev]
+      env:
+        PIP_CONSTRAINT: /tmp/constraints.txt
     - name: Run tests
       run: ci/system_tests_default.sh
     - name: Upload test results
@@ -140,8 +142,11 @@ jobs:
         check-latest: true
     - name: Install dependencies
       run: |
-        python -m pip install .[bumps,DFO,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt]
-        python -m pip install --upgrade .[dev]
+        echo "setuptools<78.0.0" > /tmp/constraints.txt
+        pip install .[bumps,DFO,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt]
+        pip install --upgrade .[dev]
+      env:
+        PIP_CONSTRAINT: /tmp/constraints.txt
     - name: Run linux tests
       if: runner.os == 'Linux'
       run: ci/unit_tests_default.sh
